1. 로그인/로그아웃처리 2. 화면 하단 system tab equipment탭 아코디언 추가 3. elevator 탭 -> cctv 화면 작업(진행중) 4. viewer/map -> eventhandler.js, init.js 불필요한 코드 제거(진행중)